<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_margin10"
        card_view:cardCornerRadius="4dp"
        android:background="@color/backgroundCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_margin10"
            android:gravity="center"
            android:background="@color/backgroundCardView">

            <ImageView
                android:id="@+id/image_flagCountry"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:contentDescription="@string/imageViewContent" />

            <TextView
                android:id="@+id/text_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:layout_marginTop="@dimen/padding_margin10"
                style="@style/FontTextNormalBlack14"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_country"
                android:maxLines="1"
                style="@style/FontTextNormalGray10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_margin10"
                android:gravity="center"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_capital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        style="@style/FontTextNormalBlack14"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_capital"
                        android:maxLines="1"
                        style="@style/FontTextNormalGray10"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        style="@style/FontTextNormalBlack14"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_currency"
                        android:maxLines="1"
                        style="@style/FontTextNormalGray10"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/image_flagContinent"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/padding_margin10"
                android:contentDescription="@string/imageViewContent"/>

            <TextView
                android:id="@+id/text_Continent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                style="@style/FontTextNormalBlack14"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_continent"
                android:maxLines="1"
                style="@style/FontTextNormalGray10"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>